[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openquantum_sde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]

[tool.setuptools.packages.find]
include = ["openquantum_sde*"]
